<resources>
    <string name="app_name">StorageUnity</string>
    <string name="ver_lista">Check List</string>
    <string name="fornecedor">Supplier</string>
    <string name="produtos">Product</string>
    <string name="procurar">Search</string>
    <string name="adicionar_novos_produtos">add new products</string>
    <string name="Error_Message">invalid field</string>
    <string name="guardar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="categoria">category</string>
    <string name="storage">Storage</string>
    <string name="item">item</string>
    <string name="action_settings">Settings</string>
    <string name="button">Button</string>
    <string name="CreatNewProduct">New Product Created</string>
    <string name="nome_de_produto">Product Name</string>
    <string name="sector">Sector</string>
    <string name="id">ID</string>
    <string name="product_name">Product Name</string>
    <string name="nome_do_produto">Product Name</string>
    <string name="CancelOperation">Operation Canceled</string>
    <string name="ProductSave">Product Saved</string>
    <string name="supplier">Supplier</string>
    <string name="add_new_supplier">ADD NEW SUPPLIER</string>
    <string name="edit_supplier">EDIT SUPPLIER</string>
    <string name="delete_supplier">DELETE SUPPLIER</string>
    <string name="edit_products">EDIT PRODUCTS</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="contact">Contact</string>
    <string name="email">Email</string>
    <string name="company">Company</string>
    <string name="chip7">Chip7</string>
    <string name="chip7_gmail_com">chip7@gmail.com</string>
    <string name="_232900300">232900300</string>


</resources>
